syntax = "proto3";

package RichServer.Protocol.Phoenix;

import "RichServer.Phoenix/Protocol/Public/TableInfo.proto";
import "RichServer.Phoenix/Protocol/Public/PlayerInfo.proto";

// 開始新局
message RoundStartState {
  string Sno = 1;     // 遊戲桌序號(可作為查詢LOG用)
  int32 RoundId = 2;  // 第幾局
}

// 新局階段的同步點
message RoundStartSyncPoint {
  TableInfo Table = 1;              // 遊戲桌資訊
  repeated PlayerInfo Players = 2;  // 所有玩家資訊
  double AutoCashOut = 3;           // SetAutoCashOut的倍數
}
