syntax = "proto3";

package RichServer.Protocol.Phoenix;

message TableInfo {
  string Id = 1;       // 遊戲桌ID(同等於 TableToken)
  string LastSno = 2;  // 遊戲桌上期期號(若是沒有則為0)
  string Sno = 3;      // 遊戲桌當期期號
  int32 MaxBet = 4;    // 最大下注
  int32 MinBet = 5;    // 最小下注
  int32 BetTime = 6;   // 下注時間
}
